--- a/products/oeapi/trunk/oecom/OEAPI.htm
+++ b/products/oeapi/trunk/oecom/OEAPI.htm
@@ -550,6 +550,18 @@
 
 <br>
 <i>Set the 'Bcc' address list of the message.</i></p>
+<p>unsigned long GetHandle();
+
+<br>
+<i>Get the window handle</i></p>
+<p>void Close();
+
+<br>
+<i>Close window</i></p>
+<p>void SaveDraft();
+
+<br>
+<i>Save this message to the draft folder</i></p>
 <hr>
 <h3><a name=IOEMsgWndEvents>IOEMsgWndEvents</a></h3>
 <p>IOEMsgWndEvents Interface</p>
